--- a/our-doc.html
+++ b/our-doc.html
@@ -58,6 +58,7 @@ ul.task-list{list-style: none;}
 <h2 class="anchored" data-anchor-id="section"></h2>
 <p>Hi Wade! This is really fun.</p>
 <p>Totally!!</p>
+<p>Cool!</p>
 </section>
 
 </main>
